--- a/LIB_Concurrent_IO_Server.vcxproj
+++ b/LIB_Concurrent_IO_Server.vcxproj
@@ -164,7 +164,6 @@
     <None Include="LIBLaunchEnableForConcurrentThreadsAtSERVER.dll" />
     <None Include="LIBWriteEnableForThreadsAtSERVERINPUTACTION.dll" />
     <None Include="LIBWriteEnableForThreadsAtSERVEROUTPUTRECIEVE.dll" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms.h" />
@@ -242,13 +241,5 @@
     <Library Include="lib\LIBWriteEnableForThreadsAtSERVEROUTPUTRECIEVE.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-    <Import Project="packages\Eigen.3.3.3\build\native\Eigen.targets" Condition="Exists('packages\Eigen.3.3.3\build\native\Eigen.targets')" />
-  </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\Eigen.3.3.3\build\native\Eigen.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Eigen.3.3.3\build\native\Eigen.targets'))" />
-  </Target>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
